syntax = "proto3";

package aidp.dev.mcp.listener;

import "common.proto";


message Listener {
  // The name of the listener.
  // Must be unique across ALL listeners.
  string name = 1;
  message SseListener { 
    // The address of the listener.
    string address = 1;
    // The port of the listener.
    uint32 port = 2;

    message TlsConfig {
      aidp.dev.common.LocalDataSource key_pem = 1;
      aidp.dev.common.LocalDataSource cert_pem = 2;
    }

    TlsConfig tls = 3;

    message Authn {
      message JwtConfig {
        repeated string issuer = 1;
        repeated string audience = 2;
        oneof jwks {
          aidp.dev.common.LocalDataSource local_jwks = 3;
          aidp.dev.common.RemoteDataSource remote_jwks = 4;
        }
      }

      JwtConfig jwt = 1;
    }

    Authn authn = 4;
  }

  message StdioListener {
  }
  
  oneof listener {
    SseListener sse = 2;
    StdioListener stdio = 3;
  }
}
